# swatplus-builder

./: .dockerignore  .gitignore  .zenodo.json  Auto_debugging_system_idea.md  BACKLOG.md  CALIBRATION_PLAN_REVISED.md  CHANGELOG.md  CITATION.cff  DECISIONS.md  Dockerfile  LICENSE  PHASE_3A_CLOSEOUT.md  PHASE_3A_PLAN.md  PHASE_3B_CLOSEOUT.md  PHASE_3B_PLAN.md  PHASE_3C_CLOSEOUT.md  PHASE_3C_PLAN.md  PHASE_3C_REVISED_PLAN.md  PHASE_3D_CLOSEOUT.md  PHASE_3D_PLAN.md  PHASE_3D_READINESS.md  PHASE_3E_PLAN.md  PLAYBOOK.md  PROGRESS.md  PROJECT.md  QUICKSTART.md  README.md  ROADMAP.md  SKILL.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  nightly-integration.yml  publish.yml
basins/: curated_v1.json
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CALIBRATION_PARAMETER_REGISTRY.md  DECISIONS.md  FULL_MODE_CONVERTER_DEFECT_LOCALIZATION.md  FULL_MODE_ENGINE_COMPATIBILITY_AUDIT.md  FULL_MODE_HYD_CONNECT_CRASH_ANALYSIS.md  FULL_MODE_MULTI_BASIN_3L11.md  FULL_MODE_PARAMETER_BRIDGE_3L12.md  FULL_MODE_ROUTING_SCHEMA_SPEC.md  FULL_MODE_TOPOLOGY_CONVERSION.md  INTEGRATION.md  PIPELINE_LEARNING_LOG.md  PIPELINE_RESEARCH_GRADE_AUDIT.md  REFERENCES.md  REPRODUCIBILITY.md  ROADMAP0.md  SCHEMA.md  SWATPLUS_MODELING_PLAYBOOK.md
docs_site/: index.md
docs_site/agents/: agent-contract.md  ai-hydro.md  mcp-server.md  tool-surface.md
docs_site/concepts/: claim-governance.md  evidence-bundle.md  invariants.md  locked-calibration.md  overview.md
docs_site/getting-started/: bootstrap.md  installation.md  quickstart.md
docs_site/guide/: building-models.md  calibration.md  canonical-workflow.md  reading-evidence.md  soil-fidelity.md
docs_site/project/: architecture.md  citing.md  license.md  status.md
docs_site/reference/: cli.md  evidence-schema.md  exit-codes.md  python-api.md
examples/: build_real_basin.py  phase2_demo.py  real_basin_marsh_creek.py  single_basin_workflow.py  usgs_basin_workflow.py
multibasin_test/01547700_full/reports/: rout_unit_root_cause.md
scripts/: acquire_03339000_sda_soils.py  audit_production_objective.py  benchmark_10_basin.py  benchmark_full_10basin.py  bootstrap_reference_dbs.sh  bootstrap_swatplus_binary.sh  cal_5_basin.py  diagnose_03339000_soils.py  load_external_soils.py  phase3g_outlet_comparability.py  phase3g_sprint3_verification.py  phase3g_sprint4_diagnostics.py  run_multibasin_e2e.py  run_objective_10basin.py  vendor_swatplus_editor.sh
scripts/ci/: install_wbt.py
scripts/overclaiming_pilot/: README.md  analyze.py  config.py  llm_judge.py  runner.py
src/swatplus_builder/: __init__.py  cli.py  config.py  diagnostics.py  errors.py  orchestrate.py  sensitivity.py  types.py
src/swatplus_builder/artifacts/: __init__.py  hashing.py  models.py  store.py
src/swatplus_builder/autoresearch/: __init__.py  loop.py  surrogate.py
src/swatplus_builder/calibration/: __init__.py  bridge_diagnostics.py  calibrator.py  diagnostic_calibrator.py  forward.py  locked_benchmark.py  nwis.py  pyswatplus_runtime.py  real_engine.py  report.py  sensitivity_screen.py  spotpy_adapter.py
src/swatplus_builder/db/: __init__.py  mock_datasets.py  project.py  schema.py  seed.py  writer.py
src/swatplus_builder/domains/: __init__.py  flood_frequency.py
src/swatplus_builder/editor/: __init__.py  api.py
src/swatplus_builder/evidence/: __init__.py  migration.py  schema.py
src/swatplus_builder/examples/: __init__.py  usgs_basin_workflow.py
src/swatplus_builder/full_mode/: crop_management.py  parameter_bridge.py  routing_fixes.py  subsurface_priors.py  topology_converter.py  verify_conversion.py  warmup.py  water_balance_gate.py
src/swatplus_builder/gis/: __init__.py  complexity.py  delineation.py  hru.py  landuse.py  nldi_fallback.py  overlay_repair.py  soil.py  tables.py  terrain.py  topology.py  validate.py
src/swatplus_builder/governance/: __init__.py  gates.py  tiers.py
src/swatplus_builder/mcp/: __init__.py  server.py
src/swatplus_builder/output/: __init__.py  dashboard.py  et_diagnostics.py  eval.py  landuse_fidelity.py  mass_diagnostics.py  mass_trace.py  metadata.py  metrics.py  reader.py  realism.py  summary.py  terrain_climate_defaults.py  volume_diagnostics.py  weather_forcing.py
src/swatplus_builder/params/: __init__.py  governance.py  registry.py
src/swatplus_builder/ref/: __init__.py  bootstrap.py  catalog.py
src/swatplus_builder/run/: __init__.py  swatplus.py
src/swatplus_builder/skills/: __init__.py
src/swatplus_builder/soil/: __init__.py  builder.py  gnatsgo.py  models.py  params.py  pc.py  plot.py  sda.py  soilgrids.py  writer.py
src/swatplus_builder/tools/: __init__.py  agent.py
src/swatplus_builder/validation/: __init__.py  runner.py
src/swatplus_builder/weather/: __init__.py  daymet.py  gridmet.py  synthetic.py  wgn.py  writer.py
src/swatplus_builder/workflows/: __init__.py  contracts.py  full_build.py  usgs_e2e.py
tests/: test_artifact_hashing.py  test_artifact_models.py  test_artifact_store.py  test_autoresearch_loop.py  test_autoresearch_surrogate.py  test_bridge_diagnostics.py  test_calibration_calibrator.py  test_calibration_dds.py  test_calibration_forward.py  test_calibration_nwis.py  test_calibration_pyswatplus_integration.py  test_calibration_pyswatplus_runtime.py  test_calibration_real_engine.py  test_calibration_report.py  test_calibration_spotpy_adapter.py  test_ci_routing_regression.py  test_cli_calibrate.py  test_cli_diagnose.py  test_cli_inspect.py  test_cli_sensitivity.py  test_cli_validate.py  test_cli_version_health.py  test_cli_workflow.py  test_container_baseline.py  test_crop_management.py  test_curated_basins.py  test_diagnostics.py  test_editor_api.py  test_et_diagnostics.py  test_evidence_schema.py  test_flood_frequency_domain.py  test_full_build.py  test_full_mode_warmup.py  test_gis_delineation_preflight.py  test_gis_hru.py  test_gis_landuse.py  test_gis_snap_max_acc.py  test_gis_soil.py  test_gis_tables.py  test_gis_validate.py  (+52 more)
tests/_artifacts/: lte_transfer_scale_bug_reproduction.md
tests/fixtures/: README.md
(+19 files in other folders)
