[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "swatplus-builder"
version = "0.4.0"
description = "Build and calibrate SWAT+ hydrologic models from a USGS gauge ID — with evidence-backed, claim-governed results."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Mohammad Galib" }]
keywords = ["swat+", "swatplus", "hydrology", "gis", "calibration", "watershed", "hru", "mcp", "claim-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

# ---- Runtime dependencies ----
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.5",
    "peewee>=3.17",
    "networkx>=3.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
gis = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "whitebox>=2.3",
    "pyflwdir>=0.5",
    "rasterstats>=0.20",
    "exactextract>=0.2",
]
hyriver = [
    "pynhd>=0.16",
    "py3dep>=0.16",
    "pydaymet>=0.16",
    "pygeohydro>=0.16",
    "pygeoogc>=0.16",
]
gridmet = [
    # GridMET adapter. Kept as a separate extra because pygridmet pulls in
    # xarray + netCDF4 + rioxarray + shapely, which ~doubles wheel weight.
    # Users who only want the core writer + synthetic generator skip this.
    "pygridmet>=0.16",
]
soils = [
    # gNATSGO adapter via Microsoft Planetary Computer. Separate extra
    # because these are Azure-/cloud-heavy deps most users won't want
    # unless they're running the real soil pipeline (vs. ``db.seed``).
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "pyarrow>=15",
]
mcp = [
    "mcp>=1.2",
]
swatplus = [
    # pySWATPlus: calibration parameter editing + sensitivity analysis
    # (optional; our run/swatplus.py handles direct subprocess execution)
    "pySWATPlus>=1.3.0",
    # Verified companion dependencies used by pySWATPlus calibration/sensitivity.
    "pymoo>=0.6.1",
    "SALib>=1.5.0",
]
viz = [
    # Soil depth distribution plots and post-run diagnostics.
    # Install with: pip install 'swatplus-builder[viz]'
    "matplotlib>=3.7,<4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "matplotlib>=3.7,<4.0",  # for soil plot tests
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
all = ["swatplus-builder[gis,hyriver,gridmet,soils,mcp,swatplus,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/AI-Hydro/swatplus-builder"
Documentation = "https://ai-hydro.github.io/swatplus-builder/"
Issues = "https://github.com/AI-Hydro/swatplus-builder/issues"
Changelog = "https://github.com/AI-Hydro/swatplus-builder/blob/main/CHANGELOG.md"

# ---- CLI entry points ----
# The command is `swat` (memorable, short). Subcommands: build, run, watershed, hrus, project, mcp.
# `swat` is registered as the umbrella Typer app; individual subcommands are in cli.py.
# `swat-mcp` launches the stdio MCP server.
[project.scripts]
swat     = "swatplus_builder.cli:app"
swat-mcp = "swatplus_builder.mcp.server:main"

# ---- Tool configuration ----

[tool.hatch.build.targets.wheel]
packages = ["src/swatplus_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "SIM", "ARG", "PTH", "NPY"]
ignore = ["S101"]  # assert in tests is fine

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: slow integration tests (require full geo stack + SWAT+ binary)",
    "network: requires network access",
    "swat_binary: requires SWAT+ engine binary",
]
