[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "swatplus-builder"
version = "0.7.6"
description = "Build and calibrate SWAT+ hydrologic models from a USGS gauge ID — with evidence-backed, claim-governed results."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Mohammad Galib" }]
keywords = ["swat+", "swatplus", "hydrology", "gis", "calibration", "watershed", "hru", "mcp", "claim-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

# ---- Runtime dependencies ----
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.5",
    "peewee>=3.17",
    "networkx>=3.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
gis = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "whitebox>=2.3",
    "pyflwdir>=0.5",
    "rasterstats>=0.20",
    "exactextract>=0.2",
]
hyriver = [
    "pynhd>=0.16",
    "py3dep>=0.16",
    "pydaymet>=0.16",
    "pygeohydro>=0.16",
    "pygeoogc>=0.16",
]
gridmet = [
    # GridMET adapter. Kept as a separate extra because pygridmet pulls in
    # xarray + netCDF4 + rioxarray + shapely, which ~doubles wheel weight.
    # Users who only want the core writer + synthetic generator skip this.
    "pygridmet>=0.16",
]
soils = [
    # gNATSGO adapter via Microsoft Planetary Computer. Separate extra
    # because these are Azure-/cloud-heavy deps most users won't want
    # unless they're running the real soil pipeline (vs. ``db.seed``).
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "pyarrow>=15",
    # Azure Blob filesystem driver + its fsspec backend. soil/pc.py reads the
    # gNATSGO muaggatt parquet directly from Planetary Computer blob storage via
    # adlfs; without these the real soil path silently degrades to synthetic.
    "fsspec>=2024.2",
    "adlfs>=2024.2",
]
mcp = [
    "mcp>=1.2",
]
swatplus = [
    # pySWATPlus: calibration parameter editing + sensitivity analysis
    # (optional; our run/swatplus.py handles direct subprocess execution)
    "pySWATPlus>=1.3.0,<1.4.0",
    # Verified companion dependencies used by pySWATPlus calibration/sensitivity.
    "pymoo>=0.6.1",
    "SALib>=1.5.0",
]
viz = [
    # Soil depth distribution plots and post-run diagnostics.
    # Install with: pip install 'swatplus-builder[viz]'
    "matplotlib>=3.7,<4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "matplotlib>=3.7,<4.0",  # for soil plot tests
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
all = ["swatplus-builder[gis,hyriver,gridmet,soils,mcp,swatplus,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/AI-Hydro/swatplus-builder"
Documentation = "https://ai-hydro.github.io/swatplus-builder/"
Issues = "https://github.com/AI-Hydro/swatplus-builder/issues"
Changelog = "https://github.com/AI-Hydro/swatplus-builder/blob/main/CHANGELOG.md"

# ---- CLI entry points ----
# The command is `swat` (memorable, short). Subcommands: build, run, watershed, hrus, project, mcp.
# `swat` is registered as the umbrella Typer app; individual subcommands are in cli.py.
# `swat-mcp` launches the stdio MCP server.
[project.scripts]
swat     = "swatplus_builder.cli:app"
swat-mcp = "swatplus_builder.mcp.server:main"

# ---- Tool configuration ----

[tool.hatch.build.targets.wheel]
packages = ["src/swatplus_builder"]

# Explicit sdist allowlist. Without this, hatchling sweeps the entire project
# root (minus VCS-ignored paths) into the sdist — which previously pulled a
# local .venv-repro/ virtualenv (~400 MB of .dylibs) into the tarball. Keep the
# sdist to source + metadata only.
[tool.hatch.build.targets.sdist]
include = [
  "/src/swatplus_builder",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CITATION.cff",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# The vendored SWAT+ Editor is upstream third-party code (its own style/era).
# We do not own it and must not reformat it, so it is excluded from our linter.
extend-exclude = ["src/swatplus_builder/editor/vendored"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "SIM", "ARG", "PTH", "NPY"]
ignore = [
    "S101",   # assert is fine (used in tests and defensive invariants)
    "E501",   # line-length is cosmetic; this scientific codebase runs wide and
              # the formatter is not enforced — lint catches bugs, not column width
    "ARG001", # unused function argument — common in callback/interface conformance
    "ARG002", # unused method argument — same; subclass/protocol signatures
    "ARG005", # unused lambda argument
    # Domain naming: hydrologic variables/parameters carry their canonical
    # upper/mixed-case names (CN2, ESCO, ALPHA_BF, ET, CRS) — not style errors.
    "N803", "N806", "N814", "N816",
    # Contextual security: this package shells out to the SWAT+ engine, uses
    # non-crypto RNG for model seeds, builds internal SQL from trusted table
    # names, and swallows best-effort cleanup errors — none are vulnerabilities.
    "S108", "S110", "S112", "S311", "S603", "S607", "S608",
    # Stylistic / opinionated simplifications — not bugs.
    "B905",   # zip() without explicit strict= (3.10+ default is fine)
    "B010",   # setattr with constant attribute
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM118",
    "C408", "C410", "C414", "C420",
    "E701", "E702", "E741",
    # PTH (pathlib) migration is stylistic, not a correctness issue here.
    "PTH101", "PTH108", "PTH110", "PTH116", "PTH118", "PTH123",
    "UP037",  # quoted annotations are harmless under `from __future__`
]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures imported for reuse legitimately shadow the import name when
# used as parameters; descriptive test names, fixture stubs, and synthetic
# data generators trip naming/security/numpy-style rules that don't apply to tests.
"tests/*" = ["F811", "N802", "ARG003", "S105", "NPY002"]
# Diagnostic/runner scripts set sys.path before importing the package.
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
# Heavy geo/data deps ship without type stubs; don't fail on third-party gaps.
ignore_missing_imports = true
# Vendored SWAT+ Editor is untyped upstream code; do not type-check or follow it.
exclude = "src/swatplus_builder/editor/vendored/"

[[tool.mypy.overrides]]
module = "swatplus_builder.editor.vendored.*"
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: slow integration tests (require full geo stack + SWAT+ binary)",
    "network: requires network access",
    "swat_binary: requires SWAT+ engine binary",
]
